--- a/TestRepo.ipynb
+++ b/TestRepo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "05bd5841-486f-4486-abce-848220a6e9c6",
    "metadata": {},
    "outputs": [
@@ -10,28 +10,28 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Whats your name? ug\n"
+      "Whats your name? John\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ug\n"
+      "John\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "What's your age? 5\n"
+      "What's your age? 53\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your name is ugand you are5\n"
+      "Your name is John and you are 53 years old.\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
     "name = input(\"Whats your name?\")\n",
     "print(name)\n",
     "age = input(\"What's your age?\")\n",
-    "print(\"Your name is \" + name + \" and you are \" + age)"
+    "print(\"Your name is \" + name + \" and you are \" + age + \" years old.\")"
    ]
   },
   {
