--- a/TestRepo.ipynb
+++ b/TestRepo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "05bd5841-486f-4486-abce-848220a6e9c6",
    "metadata": {},
    "outputs": [
@@ -10,34 +10,20 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Whats your name? John\n"
+      "Whats your name? John\n",
+      "What's your age? 16\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "John\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "What's your age? 53\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your name is John and you are 53 years old.\n"
+      "Your name is John and you are 16 years old.\n"
      ]
     }
    ],
    "source": [
     "name = input(\"Whats your name?\")\n",
-    "print(name)\n",
     "age = input(\"What's your age?\")\n",
     "print(\"Your name is \" + name + \" and you are \" + age + \" years old.\")"
    ]
