--- a/TestRepo.ipynb
+++ b/TestRepo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "05bd5841-486f-4486-abce-848220a6e9c6",
    "metadata": {},
    "outputs": [
@@ -18,14 +18,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your name is John and you are 16 years old.\n"
+      "Your name is John and you are 16 years old.\n",
+      "The length of your age is 2 digits.\n"
      ]
     }
    ],
    "source": [
     "name = input(\"Whats your name?\")\n",
     "age = input(\"What's your age?\")\n",
-    "print(\"Your name is \" + name + \" and you are \" + age + \" years old.\")"
+    "print(\"Your name is \" + name + \" and you are \" + age + \" years old.\")\n",
+    "print(\"The length of your age is \" + str(len(age)) + \" digits.\")"
    ]
   },
   {
